examples/invalid/unsed_secret.reqlang
```%config
vars = []
secrets = ["base_url"]

[envs]

[prompts]
```

```%request
GET / HTTP/1.1
```
